--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+d<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Page WOn - Responsive HTML CSS Template</title>
+    <title>CG Artist</title>
 <!--
 Page One Template
 https://templatemo.com/tm-504-page-one
@@ -33,13 +33,13 @@ https://templatemo.com/tm-504-page-one
             <section class="parallax-window tm-section tm-section-home" id="home" data-parallax="scroll" data-image-src="img/bg-01.jpg">
                 <div class="tm-page-content-width tm-padding-b">
                     <div class="text-center tm-site-title-wrap">
-                        <h1 class="tm-site-title">Page One</h1>    
+                        <h1 class="tm-site-title">car life</h1>    
                     </div>                    
                     <div class="tm-textbox tm-white-bg">
                         <h2 class="tm-green-text tm-section-title">Welcome!</h2>
-                        <p>Page One is a parallax clean layout with beautiful images from <a rel="nofollow" href="https://unsplash.com" target="_blank">Unsplash</a> website. You can download and use this template for your sites.</p>
-                        <p>Please mention TemplateMo site to your friends. Thank you. Nam volutpat ipsum et felis ultrices dignissim.</p>
-                        <a href="#services" class="tm-btn">Let's Begin</a>
+                        <p>renders <a rel="nofollow" href="https://www.instagram.com/boost4u" target="_blank">Insta</a> </p>
+                        <p>vehicular dreams</p>
+                        <a href="#services" class="tm-btn">drive</a>
                     </div>    
                 </div>
             </section>
