--- a/index.html
+++ b/index.html
@@ -49,24 +49,24 @@ https://templatemo.com/tm-504-page-one
                 <div class="tm-page-content-width">
                     <div class="tm-translucent-white-bg tm-content-box tm-content-box-right tm-textbox-full-height">
                         <div class="tm-content-box-inner">
-                            <h2 class="tm-section-title tm-blue-text">Our Services</h2>
-                            <p>Etiam sed diam hendrerit dolor posuere dignissim. Integer eget nunc consequat, posuere augue maximus, elementum metus. Suspendisse et hendrerit velit. Morbi consectetur nisi.</p>
+                            <h2 class="tm-section-title tm-blue-text">Skills</h2>
+                            <p>Modeling</p>
                             <div class="media tm-media">
                                 <i class="fa fa-4x fa-podcast tm-media-icon"></i>    
                                 <div class="media-body tm-media-body">
-                                    <p class="tm-small-font">Phasellus tellus arcu, lobortis ut mauris ac, luctus viverra nisl. Integer iaculis sollicitudin ex vel condimentum.</p>       
+                                    <p class="tm-small-font">Design</p>       
                                 </div>                                
                             </div>
                             <div class="media tm-media">
                                 <i class="fa fa-3x fa-calendar tm-media-icon"></i>    
                                 <div class="media-body tm-media-body">                                    
-                                    <p class="tm-small-font">Phasellus tellus arcu, lobortis ut mauris ac, luctus viverra nisl. Integer iaculis sollicitudin ex vel condimentum.</p>   
+                                    <p class="tm-small-font">Materials</p>   
                                 </div>
                             </div>
                             <div class="media tm-media">
                                 <i class="fa fa-3x fa-bell-o tm-media-icon"></i>    
                                 <div class="media-body tm-media-body">                                    
-                                    <p class="tm-small-font">Phasellus tellus arcu, lobortis ut mauris ac, luctus viverra nisl. Integer iaculis sollicitudin ex vel condimentum.</p>   
+                                    <p class="tm-small-font">Lighting</p>   
                                 </div>
                             </div>
                             <a href="#gallery" class="tm-btn">More Info.</a>
@@ -131,8 +131,8 @@ https://templatemo.com/tm-504-page-one
             <section class="parallax-window tm-section tm-section-contact" id="contact" data-parallax="scroll" data-image-src="img/bg-04.jpg">
                 <div class="tm-page-content-width">
                     <div class="tm-translucent-white-bg tm-textbox tm-content-box tm-textbox-full-height">
-                        <h2 class="tm-section-title tm-red-text">Contact Us</h2>
-                        <p>Suspendisse commodo, quam eget viverra ultrices, est erat condimentum est, in elementum diam erat ut lacus. Donec ornare massa quis metus bibendum aliquet.</p>
+                        <h2 class="tm-section-title tm-red-text">Contact</h2>
+                        <p>https://www.instagram.com/boost4u</p>
                         
                         <!-- contact form -->
                         <form action="index.html" method="post" class="tm-contact-form">
